--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   
   <body>
     <h1> Julia Amsler</h1>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#news">News</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#about">About</a></li>
+    </ul>
   </body>
   
 </html>
