--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1> Julia Amsler</h1>
     <ul>
       <li><a href="#home">Home</a></li>
-      <li><a href="#news">Portfolio</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#about">About</a></li>
     </ul>
